<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="app_name">Eru Yemekhane</string>
    <string name="ogrenci_title">Öğrenci</string>
    <string name="personel_title">Personel</string>
    <string name="error">HATA</string>
    <string name="no_value">Veri Alınamadı</string>
    <string name="_m_please_wait">Güncel veriler yükleniyor…</string>
    <string name="data_updated">Son veriler başarıyla yüklendi</string>
    <string name="error_loading_data">Veriler alınırken bir hata meydana geldi.</string>
    <string name="error_loading_data_certificate">SSLHandshakeException: Sertifika süresi doldu.</string>
    <string name="no_connection">İnternet bağlantısı bulunamadı. Son kayıtlar yüklendi.</string>
    <string name="data_loaded_last_known">Son kayıtlar yüklendi</string>
    <string name="open_web_site">Web Sitesine Git</string>
    <string name="settings">Ayarlar</string>
    <string name="about">Hakkında</string>
    <string name="system_default">Cihaz temasını kullan</string>
    <string name="light">Açık</string>
    <string name="dark">Koyu</string>

    <string name="empty_title">Yemek listesi henüz yayınlanmadı.</string>
    <string name="empty_reason_title"><u>Yemek listesinin boş olma sebepleri:</u></string>
    <string name="empty_reason_content">
         • Verilerin alındığı erciyes.edu.tr adresindeki listenin henüz yayınlanmaması.\n
         • erciyes.edu.tr adresinin yanıt vermemesi
    </string>
    <string name="empty_solution_title"><u>Çözüm önerileri:</u></string>
    <string name="empty_solution_content">
        • Ekranı yukarıdan aşağıya çekerek listeyi güncelleyebilirsiniz.\n
        • Aşağıda bulunan \'Web sitesine git\' butonuna tıklayarak listelerin yer aldığı web sitesini ziyaret edebilirsiniz.\n
        • Listeler web sitesinde de gözükmüyorsa, yayınlanana kadar beklemeniz gerekmektedir.</string>

    <!-- Settings Keys -->
    <string name="firstTabKey">firstTab</string>
    <string name="firstTabTitle">Başlangıç Sayfası</string>
    <string name="firstTabSummary">İlk sırada gösterilecek liste türünü belirtin</string>

    <string name="nightModeKey">nightModeKey</string>
    <string name="nightModeTitle">Görünüm</string>
    <string name="nightModeSummary">Açık/Koyu tema tercihinizi belirtin </string>

    <string name="adKey">adActivity</string>
    <string name="adActivityTitle">Reklam Görünümü</string>
    <string name="adSummaryActive">Reklamlar etkin</string>
    <string name="adSummaryPassive">Reklamlar %s tarihinden sonra tekrar aktif olur.</string>

    <string name="focusNonEmptyKey">focusNonEmptyKey</string>
    <string name="focusNonEmptyTitle">Dolu Listeye Odaklan</string>
    <string name="focusNonEmptySummary">Listelerden birisi boş, diğeri dolu ise dolu olan açılır</string>

    <string name="autoUpdateBeginKey">autoUpdateKey</string>
    <string name="autoUpdateBeginTitle">Liste Güncellemeleri</string>
    <string name="autoUpdateBeginSummary">Listeler her açılışta güncelleme kontrolünden geçer</string>


    <!-- SharedPref Key -->
    <string name="secondaryPrefKey">secondaryPrefKey</string>
    <string name="prefRewardExpireDate">prefRewardExpireDate</string>

    <string name="myGmail">bm.umuttekin@gmail.com</string>
    <string name="github_address">https://github.com/tekinumut/EruYemekhane</string>
    <string name="kullanim_kilavuzu">
        • Uygulamadan daha fazla verim alabilmek için lütfen Program Kullanımı kısmını okuyunuz.\n
        • Uygulama öğrenci ve personel yemek listelerini gösterir. Bu yayınlanan listenin değişmesi ile güncellenebilir.\n
        • Ayarlar menüsünden ilk olarak görmek istediğiniz listeyi düzenleyebilirsiniz.\n
        • Yine ayarlar menüsünden gece modunu kapatıp açabilirsiniz.\n
        • Uygulama size hafızasında kayıtlı son verileri gösterir. Eğer erciyes.edu.tr\'den verileri sorunsuz bir şekilde alırsanız, bu hafızadaki veriler
        güncel veriler ile değiştirilir.\n
        • Listeler belirli sebeplerden dolayı boş olabilir. Bu sebepleri size açıklayan bir ekran gösterilir. \n
        • Listeleri görüntülerken ekranı yukarıdan aşağı çekerek listeleri yenileyebilirsiniz.\n
        • Uygulamanın güncel kodlarına aşağıdaki Github linkinden erişebilirsiniz.\n
        • Lütfen geri bildirim göndermekten ve uygulamayı değerlendirmekten çekinmeyin.</string>
    <string name="send_mail">Mail Gönder</string>
    <string name="prog_kullanimi">Program Kullanımı</string>
    <string name="rate_app">Uygulamayı Değerlendir</string>
    <string name="send_feedback">Geri Bildirim Gönder</string>
    <string name="github_source_code">Uygulama Kaynak Kodları</string>
    <string name="expand_more">Genişletmek için tıkla</string>
    <string name="expand_less">Daraltmak için tıkla</string>

    <string name="disable_ad_title">Reklamları iptal et</string>
    <string name="disable_ad_content">Reklamları bir ay boyunca kapatmak için bir adet video reklam izlemeniz gerekmektedir.</string>
    <string name="kabul_et">Kabul Et</string>
    <string name="iptal_et">İptal et</string>
    <string name="ad_closed">Video reklam kapatıldı!</string>
    <string name="ad_rewarded">Reklamlar 1 ay boyunca kaldırıldı.</string>
    <string name="ad_failed_load">Reklam yüklenemedi! Lütfen tekrar deneyiniz.</string>
    <string name="reward_ad_loading">Reklam Yükleniyor</string>
    <string name="ad_load_fail_try_again">Reklam yenilemedi.\nTekrar yüklemek için tıkla!</string>

</resources>
