<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/defTab_entries"
        android:entryValues="@array/defTab_values"
        android:key="@string/firstTabKey"
        android:summary="@string/firstTabSummary"
        android:title="@string/firstTabTitle" />
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/nightModel_entries"
        android:entryValues="@array/nightMode_values"
        android:key="@string/nightModeKey"
        android:summary="@string/nightModeSummary"
        android:title="@string/nightModeTitle" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/adKey"
        android:summary="@string/adSummaryActive"
        android:title="@string/adActivityTitle">
    </SwitchPreference>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/focusNonEmptyKey"
        android:summary="@string/focusNonEmptySummary"
        android:title="@string/focusNonEmptyTitle" />

</PreferenceScreen>