<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/EmptyFoodTextView"
            android:layout_marginTop="15dp"
            android:text="@string/empty_reason_title" />

        <TextView
            style="@style/EmptyFoodTextView"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/empty_reason_content" />

        <TextView
            style="@style/EmptyFoodTextView"
            android:layout_marginTop="8dp"
            android:text="@string/empty_solution_title" />

        <TextView
            style="@style/EmptyFoodTextView"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/empty_solution_content" />

        <Button
            android:id="@+id/btn_open_web_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/open_web_site"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>