<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded_transparent"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tvWatchAdTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/disable_ad_title"
        android:textColor="@color/DateText"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWatchAdContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:lineSpacingMultiplier="1.1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/disable_ad_content"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWatchAdTitle" />

    <Button
        android:id="@+id/btnReject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_btn_red"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/iptal_et"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnAccept"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/tvWatchAdContent"
        app:layout_constraintTop_toBottomOf="@+id/tvWatchAdContent" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn_green"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/kabul_et"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnReject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnReject"
        app:layout_constraintTop_toTopOf="@+id/btnReject" />

    <LinearLayout
        android:id="@+id/llAdLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btnAccept"
        app:layout_constraintStart_toStartOf="@+id/btnReject"
        app:layout_constraintTop_toBottomOf="@+id/btnReject"
        tools:visibility="visible">

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:indeterminateTint="@color/button_blue"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/reward_ad_loading"
            android:textColor="@color/primaryText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAdErrorRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/btnAccept"
        app:layout_constraintStart_toStartOf="@+id/btnReject"
        app:layout_constraintTop_toBottomOf="@+id/btnAccept"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ad_load_fail_try_again"
            android:textColor="@color/red" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>