<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prog_kullanimi"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/size_20"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/kullanim_kilavuzu_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:maxLines="5"
            android:lineSpacingExtra="@dimen/margin_4"
            android:text="@string/kullanim_kilavuzu"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/size_16sp"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_8" />

        <TextView
            android:id="@+id/click_to_expand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:drawableStart="@drawable/ic_expand_more"
            android:gravity="center"
            android:text="@string/expand_more"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/size_16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/kullanim_kilavuzu_text" />

        <TextView
            android:id="@+id/send_feedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:drawableStart="@drawable/ic_gmail"
            android:drawablePadding="@dimen/margin_15"
            android:gravity="center|start"
            android:text="@string/send_feedback"
            android:textSize="@dimen/size_18"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/click_to_expand" />

        <TextView
            android:id="@+id/rate_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:drawableStart="@drawable/ic_google_play"
            android:drawablePadding="@dimen/margin_15"
            android:gravity="center|start"
            android:text="@string/rate_app"
            android:textSize="@dimen/size_18"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/send_feedback" />

        <TextView
            android:id="@+id/github_source_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginBottom="@dimen/margin_20"
            android:drawableStart="@drawable/ic_github_logo"
            android:drawablePadding="@dimen/margin_15"
            android:gravity="center|start"
            android:text="@string/github_source_code"
            android:textSize="@dimen/size_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/rate_app" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>